--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
 #root {
   max-width: 100vw;  
   text-align: center;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   background-color:#f1f5f8;
   min-height: 100vh;
- padding: 12px;
+ padding: 0;
   }
 
 code {
